--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🇭🇰 Hong Kong Salary Tax Calculator</h1>
+        <h1> Hong Kong Salary Tax Calculator</h1>
         
         <div class="input-section">
             <div class="form-group">
@@ -295,4 +295,5 @@
         });
     </script>
 </body>
+
 </html>
