--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HK Salary Tax Calculator</title>
+    <title>Salary Tax Calculator</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> Hong Kong Salary Tax Calculator</h1>
+        <h1>Salary Tax Calculator</h1>
         
         <div class="input-section">
             <div class="form-group">
@@ -297,3 +297,4 @@
 </body>
 
 </html>
+
