--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Hong Kong Salary Tax Calculator</h1>
+            <h1>Hong Kong Salary Tax Calculator - By LW</h1>
             <p class="subtitle">Learn how to calculate salary tax with our interactive tool</p>
         </header>
         
@@ -616,4 +616,5 @@
     </script>
 </body>
 </html>
+
 
