--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>Hong Kong Salary Tax Calculator</h1>
-            <p class="subtitle">Learn how to calculate salary tax with our interactive tool</p>
+            <h1>Hong Kong Salary Tax Calculator by LW</h1>
+            <p class="subtitle">Learn how to calculate salary tax with this interactive tool</p>
         </header>
         
         <div class="content">
@@ -559,7 +559,6 @@
                         <li>Tax rates range from 2% to 17% based on income brackets</li>
                         <li>Net chargeable income = Annual income - Tax allowance</li>
                         <li>Use the "Generate Random Values" button to practice with different scenarios</li>
-                        <li>The random generator creates values ending with "00" for easier calculation</li>
                     </ul>
                 </div>
             </div>
@@ -714,3 +713,4 @@
     </script>
 </body>
 </html>
+
